@@ -4,6 +4,11 @@
 
 #include <string>
 
+#define APPERR_NOSUPPORT MAKERESULT(RL_PERMANENT, RS_NOTSUPPORTED, RM_APPLICATION, 0)
+#define APPERR_CANCELLED MAKERESULT(RL_TEMPORARY, RS_CANCELED, RM_APPLICATION, 1)
+#define APPERR_NOSPACE MAKERESULT(RL_TEMPORARY, RS_OUTOFRESOURCE, RM_APPLICATION, 2)
+#define APPERR_NOREINSTALL MAKERESULT(RL_FATAL, RS_INVALIDSTATE, RM_APPLICATION, 3)
+#define APPERR_TITLE_MISMATCH MAKERESULT(RL_TEMPORARY, RS_OUTOFRESOURCE, RM_APPLICATION, 4)
 
 enum ErrTypes
 {
