@@ -42,7 +42,7 @@ void exit_services()
 
 static void push_a_widget(ui::Widgets& wids, float *height = nullptr)
 {
-	ui::Text *text = new ui::Text(ui::mk_center_WText("Press " GLYPH_A " to continue", SCREEN_HEIGHT() - 30.0f));
+	ui::Text *text = new ui::Text(ui::mk_center_WText("Press " GLYPH_A " to exit", SCREEN_HEIGHT() - 30.0f));
 	if(height != nullptr) *height = ui::text_height(&text->gtext().ctext) - 3.0f;
 	wids.push_back(text);
 }
@@ -87,8 +87,10 @@ void handle_error(error_container err)
 	wids.push_back(new ui::PressToContinue(KEY_A));
 	ui::Text *desc = ui::wid()->get<ui::Text>("curr_action_desc");
 	if(desc == nullptr)
-		wids.push_back(new ui::Text(ui::mk_center_WText("Fatal Panic Occurred @ " + caller, 45.0f)));
-	else { desc->replace_text("Fatal Panic Occurred @ " + caller); desc->visibility(true); }
+		wids.push_back(new ui::Text(ui::mk_center_WText("Fatal Panic Occurred", 45.0f)));
+	else { desc->replace_text("Fatal Panic Occurred"); desc->visibility(true); }
+
+	wids.push_back("caller", new ui::Text(ui::mk_center_WText(caller, 70.0f)));
 
 	generic_main_breaking_loop(wids);
 
@@ -106,10 +108,10 @@ void handle_error(error_container err)
 	ui::Widgets wids;
 
 	ui::WrapText *text = new ui::WrapText(msg);
-	text->set_basey(70.0f);
+	wids.push_back(text);
+	text->set_basey(90.0f);
 	text->center();
 
-	wids.push_back(text);
 	push_a_widget(wids);
 
 	panic_core(caller, wids);
@@ -120,7 +122,7 @@ void handle_error(error_container err)
 	ui::Widgets wids;
 
 	error_container err = get_error(res);
-	push_error_widget(err, wids);
+	push_error_widget(err, wids, 90.0f);
 
 	panic_core(caller, wids);
 }
