@@ -2,6 +2,9 @@
 v0.2.0:
  - introduced hLink
  - implemented resuming downloads
+ - fix konami code easter egg not working
+ - fix bug where single line panic message wouldn't show
+ - add find missing dlc/updates feature
 
 v0.1.6:
  - added extended meta screen
